<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    tools:context="ru.vladus177.n3tworktest.ItemOneFragment">


    <TextView
        android:id="@+id/tv1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/item_1"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/tv1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv1_1"
        android:text="@string/task1_description"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tv1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv1_2"
        android:text="@string/task1_description2"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/et1_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1_3"
        android:hint="@string/task1_hint1"
        android:editable="false"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/et1_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et1_1"
        android:hint="@string/task1_hint2"
        android:editable="false"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv1_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/et1_2"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/btn1_run_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv1_result"
        android:text="Run test"/>

</RelativeLayout>